# tree-sitter-javadoc

./: .clang-format  .clangd  .editorconfig  .gitignore  .tsqueryrc.json  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  eslint.config.mjs  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: actionlint.yml  actions.yml  ci.yml  dependency-submission.yml  diff.yml  lint.yml  publish.yml  regenerate.yml
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_javadoc/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterJavadocTests/: TreeSitterJavadocTests.swift
injection_tests/: Makefile  README.md  pyproject.toml
injection_tests/data/: .cassandra.patterns  .cassandra.repo  .ghidra.patterns  .ghidra.repo  .gitignore  .guava.patterns  .guava.repo  .hibernate-orm.patterns  .hibernate-orm.repo  .jackson-core.repo  .jenkins.patterns  .jenkins.repo  .junit-framework.repo  .lucene.repo  .rxjava.repo  .spring-framework.patterns  .spring-framework.repo
injection_tests/src/injection_tester/: __init__.py  tester.py
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: author_tag.txt  code_tag.txt  custom_tag.txt  deprecated_tag.txt  doc_root_tag.txt  document.txt  exception_tag.txt  hidden_tag.txt  index_tag.txt  inherit_doc_tag.txt  link_tag_fragment.txt  link_tag_member.txt  link_tag_module.txt  link_tag_module_type.txt  link_tag_module_type_fragment.txt  link_tag_module_type_member.txt  link_tag_trailing_space.txt  link_tag_type.txt  link_tag_type_fragment.txt  link_tag_type_member.txt  literal_tag.txt  member.txt  param_tag.txt  provides_tag.txt  return_tag.txt  see_tag_fragment.txt  see_tag_member.txt  see_tag_module.txt  see_tag_module_type.txt  see_tag_module_type_fragment.txt  see_tag_module_type_member.txt  see_tag_string.txt  see_tag_type.txt  see_tag_type_fragment.txt  see_tag_type_member.txt  see_tag_url.txt  serial_data_tag.txt  serial_field_tag.txt  serial_tag.txt  since_tag.txt  (+8 more)
