[project]
name = "injection_tester"
version = "0.0.1"
description = "javadoc injection tester"
keywords = ["incremental", "parsing", "tree-sitter", "java", "javadoc"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Robert Muir", email = "rmuir@apache.org" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"
dependencies = [
  "tree-sitter>=0.25",
  "tree-sitter-javadoc",
  "tree-sitter-java>=0.23.5",
]

[project.scripts]
injection_tester = "injection_tester:main"
injection_parser = "injection_tester:parse"

[project.urls]
Homepage = "https://github.com/rmuir/tree-sitter-javadoc"

[dependency-groups]
dev = [
  "ruff==0.14.14",
  "ty==0.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.10"
exclude = [
  "data",
  ".venv"
]
venvPath = "."
venv = ".venv"
typeCheckingMode = "all"
reportAny = "hint"

[tool.ruff]
line-length = 120
extend-exclude = ["data"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "S603",    # git is used
  "S607",    # git is used
  "S101",    # assertions are good
  "T201",    # prints are useful
  "ERA001",  # sometimes code must be commented out to debug

  # These rules are always disabled, conflict with other rules
  # don't enable! (switch to the alternative instead)
  "D203",    # disabled in favor of D211 (no-black-line-before-class)
  "D213",    # disabled in favor of D212 (multi-line-summary-first-line)

  # These rules are always disabled: conflict with the formatter
  # don't enable! https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191", "E111", "E114", "E117", "D206", "D300", "Q000", "Q001",
  "Q002", "Q003", "COM812", "COM819", "ISC001", "ISC002", "E501",
]

[tool.ty.rules]
division-by-zero = "warn"
# rule is indeed not ready
# possibly-unresolved-reference = "warn"
unused-ignore-comment = "warn"

[tool.ty.src]
exclude = ["data"]

[tool.ty.terminal]
error-on-warning = true

[tool.uv.sources]
# use tree-sitter-javadoc from parent directory
tree-sitter-javadoc.path = "../"
